// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`intrinsic_call.js [espree] format 1`] = `
"Unexpected token % (2:13)
  1 | function doSmth()     {
> 2 |             %DebugPrint
    |             ^
  3 |         (
  4 |                 foo )
  5 |   }"
`;

exports[`intrinsic_call.js [meriyah] format 1`] = `
"[2:13]: Unexpected token: '%' (2:13)
  1 | function doSmth()     {
> 2 |             %DebugPrint
    |             ^
  3 |         (
  4 |                 foo )
  5 |   }"
`;

exports[`intrinsic_call.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function doSmth()     {
            %DebugPrint
        (
                foo )
  }

    function printFunc  (
        f
) {
    if(%
    IsAsmWasmCode(f))              console.log("asm.js");
        if(

        % IsWasmCode(
        f))
            console.log (
                "wasm"
            );

    console.log
    (%
        GetFunctioName(f)
        );
}

=====================================output=====================================
function doSmth() {
  %DebugPrint(foo);
}

function printFunc(f) {
  if (%IsAsmWasmCode(f)) console.log("asm.js");
  if (%IsWasmCode(f)) console.log("wasm");

  console.log(%GetFunctioName(f));
}

================================================================================
`;
